--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">iLocator</string>
+    <string name="app_name">Login Sample</string>
+    <string name="register">REGISTER</string>
+    <string name="login_email_hint">Email</string>
+    <string name="login_password_hint">Password</string>
+    <string name="signup_login_hint">Already have an account? Sign In</string>
+    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
     <string name="title_activity_maps">Map</string>
     <string name="default_notification_channel_name" translatable="true">Weather</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
@@ -8,4 +13,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="kendrick">Kendrick</string>
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="action_profile">Профиль</string>
+    <string name="err_msg_login">Введите логин</string>
+    <string name="err_msg_pass">Введите пароль</string>
 </resources>
