--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="action_profile">Профиль</string>
     <string name="err_msg_login">Введите логин</string>
     <string name="err_msg_pass">Введите пароль</string>
+    <string name="title_activity_new_message">NewMessageActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
