--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
     <string name="err_msg_login">Введите логин</string>
     <string name="err_msg_pass">Введите пароль</string>
     <string name="title_activity_new_message">NewMessageActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">База</string>
+    <string name="tab_text_2">Контакты</string>
 </resources>
